--- a/final_image_seg.ipynb
+++ b/final_image_seg.ipynb
@@ -3,8 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "final image seg.ipynb",
-      "provenance": []
+      "name": "final_image_seg.ipynb",
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/anjalisgrl/ACM_project/blob/master/final_image_seg.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "6e9LpxiXepGo"
@@ -21,7 +32,7 @@
       "source": [
         "import tensorflow as tf"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -38,7 +49,7 @@
         "!pip install git+https://github.com/tensorflow/examples.git\n",
         "!pip install -U tfds-nightly"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -101,7 +112,7 @@
         "from IPython.display import clear_output\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -117,7 +128,7 @@
         "from keras.layers import Dense, Dropout, Activation, Flatten\n",
         "from keras.layers import Conv2D, MaxPooling2D"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -128,7 +139,7 @@
       "source": [
         "dataset, info = tfds.load('oxford_iiit_pet:3.*.*', with_info=True)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -142,7 +153,7 @@
         "  input_mask -= 1\n",
         "  return input_image, input_mask"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -164,7 +175,7 @@
         "\n",
         "  return input_image, input_mask"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -181,7 +192,7 @@
         "\n",
         "  return input_image, input_mask"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -195,7 +206,7 @@
         "BUFFER_SIZE = 1000\n",
         "STEPS_PER_EPOCH = TRAIN_LENGTH // BATCH_SIZE"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -207,7 +218,7 @@
         "train = dataset['train'].map(load_image_train, num_parallel_calls=tf.data.experimental.AUTOTUNE)\n",
         "test = dataset['test'].map(load_image_test)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -220,7 +231,7 @@
         "train_dataset = train_dataset.prefetch(buffer_size=tf.data.experimental.AUTOTUNE)\n",
         "test_dataset = test.batch(BATCH_SIZE)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -241,7 +252,7 @@
         "    plt.axis('off')\n",
         "  plt.show()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -259,7 +270,7 @@
         "  sample_image, sample_mask = image, mask\n",
         "display([sample_image, sample_mask])"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -284,7 +295,7 @@
       "source": [
         "OUTPUT_CHANNELS = 3"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -311,7 +322,7 @@
         "    \n",
         "    return x"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -365,7 +376,7 @@
         "    model = Model(inputs=[input_img], outputs=[outputs])\n",
         "    return model"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -384,7 +395,7 @@
         "              loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
         "              metrics=['accuracy'])"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
